--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -2,28 +2,35 @@
 @use 'mixins' as *;
 
 .hero-section {
-    @include white-card;
-    max-width: 700px;
     margin: 0 auto;
+    position: relative;
+    max-width: 700px;
 
     h1 {
         color: $primary-blue;
-        padding: 1rem 0;
     }
 
     .video-container {
-        margin-bottom: 1rem;
+        margin: 0 auto;
 
         video {
-            width: calc(100% + 2rem);
-            margin-left: -1rem;
-            margin-right: -1rem;
+            width: 100%;
+        }
+    }
+
+    .hero-card {
+        @include white-card;
+        margin: 0 auto;
+
+        p {
+            padding: 1rem 0;
         }
     }
 
     .card-flex {
         display: flex;
         flex-direction: column;
+
         gap: 1rem;
 
         h2 {
@@ -39,7 +46,6 @@
         .products-card {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
             background-color: $primary-blue;
             color: $white;
             padding: 1rem;
@@ -51,13 +57,13 @@
 
             a {
                 @include btn ($white, $primary-blue, #A0D3FF);
+                border: 2px solid $white;
             }
         }
 
         .services-card {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
             background-color: $tertiary-dark-blue;
             color: $white;
             padding: 1rem;
@@ -76,7 +82,6 @@
         .promo-card {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
             background-color: $secondary-yellow;
             color: $black;
             padding: 1rem;
@@ -98,45 +103,52 @@
     background-color: $primary-blue;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
     margin-top: 6rem;
 
     img {
         border-radius: 12px;
         margin-top: 1rem;
+        width: 100%;
+        max-width: 700px;
     }
 
     .high-quality-card {
         @include white-card;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding-top: 1rem;
         border-radius: 12px;
         margin-bottom: 1rem;
-
-        h2 {
-            padding: 1rem 0;
-        }
+        max-width: 700px;
     }
 
     a {
         @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
         display: block;
-        margin-top: 1rem;
     }
 }
 
 .featured-products {
     margin-top: 6rem;
     color: $white;
+    margin-left: auto;
+    margin-right: auto;
 
     h2 {
         @include yellow-header-products;
         padding-top: 27px;
         padding-bottom: 27px;
+        max-width: 700px;
     }
 
     .products-section {
         background-color: $tertiary-dark-blue;
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 2rem;
         border-radius: 15px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -150,6 +162,7 @@
             flex-direction: column;
             gap: 1rem;
             padding-top: 3rem;
+            max-width: 294px;
 
             a {
                 @include btn ($white, $tertiary-dark-blue, #A0D3FF);
@@ -160,6 +173,7 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            max-width: 294px;
 
             a {
                 @include btn ($white, $tertiary-dark-blue, #A0D3FF);
@@ -171,10 +185,10 @@
             flex-direction: column;
             gap: 1rem;
             margin-bottom: 1rem;
+            max-width: 294px;
 
             a {
                 @include btn ($white, $tertiary-dark-blue, #A0D3FF);
-                padding: 4.5px 12px;
             }
         }
     }
@@ -186,13 +200,19 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
     display: flex;
-    ;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
+
+    img {
+        border-radius: 12px;
+        max-width: 700px;
+    }
 
     .online-card {
         @include white-card;
         border-radius: 12px;
+        max-width: 700px;
 
         h2 {
             padding: 1rem 0;
@@ -201,6 +221,8 @@
 
     a {
         @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
+        max-width: 700px;
+        width: 100%;
     }
 }
 
@@ -222,6 +244,7 @@
         padding-top: 3rem;
         padding-bottom: 1rem;
         border-radius: 15px;
+        max-width: 700px;
 
         img {
             border-radius: 12px;
@@ -236,13 +259,76 @@
                 @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
                 display: block;
             }
-    
+
             .about-contact {
-                @include btn ($tertiary-dark-blue, $white, 0);
+                @include btn ($tertiary-dark-blue, $white, $primary-blue);
                 display: block;
                 border: 2px solid $white;
             }
         }
 
+    }
+}
+
+@media (min-width: 1000px) {
+    .hero-section {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 20px;
+        max-width: 1920px;
+        padding: 172px 0;
+        .video-container {
+            position: absolute;
+            inset: 0;
+            z-index: -1;
+
+            video {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .hero-card {
+            width: 920px;
+            border-radius: 15px;
+            padding: 2rem;
+            grid-column: 2 / span 6;
+
+            h1, p {
+                max-width: 574px;
+            }
+        }
+
+        .card-flex {
+            flex-direction: row;
+            justify-content: center;
+            gap: 20px;
+
+            h2 {
+                font-size: 24px;
+            }
+
+            .products-card {
+                justify-content: space-between;
+            }
+        }
+    }
+
+    .high-quality-section {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        flex-direction: unset;
+
+        img {
+            max-width: none;
+            margin-top: unset;
+            grid-column: 2 / span 5;
+        }
+
+        .high-quality-card {
+            grid-column: 8 / span 4;
+            margin-bottom: unset;
+        }
     }
 }
