--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -197,33 +197,37 @@
 .online-services {
     margin-top: 6rem;
     background-color: $primary-blue;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
 
-    img {
-        border-radius: 12px;
+    .service-container {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
         max-width: 700px;
-    }
+        margin: 0 auto;
 
-    .online-card {
-        @include white-card;
-        border-radius: 12px;
-        max-width: 700px;
-
-        h2 {
-            padding: 1rem 0;
+        img {
+            border-radius: 12px;
+        }
+    
+        .online-card {
+            @include white-card;
+            border-radius: 12px;
+    
+            h2 {
+                padding: 1rem 0;
+            }
+        }
+    
+        a {
+            @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
+            max-width: 700px;
+            width: 100%;
         }
     }
 
-    a {
-        @include btn ($secondary-yellow, $tertiary-dark-blue, #FFEDAD);
-        max-width: 700px;
-        width: 100%;
-    }
 }
 
 .about-section {
@@ -277,6 +281,7 @@
         gap: 20px;
         max-width: 1920px;
         padding: 172px 0;
+
         .video-container {
             position: absolute;
             inset: 0;
@@ -295,7 +300,8 @@
             padding: 2rem;
             grid-column: 2 / span 6;
 
-            h1, p {
+            h1,
+            p {
                 max-width: 574px;
             }
         }
