Added desktop styling to high quality section

--- a/src/components/HomePage/HighQuality.astro
+++ b/src/components/HomePage/HighQuality.astro
@@ -4,10 +4,12 @@ const {highQualityHeader, highQualityImage, highQualityText, highQualityAltText,
 ---
 
 <section class="high-quality-section container">
-    <img src={highQualityImage} alt={highQualityAltText}>
-    <div class="high-quality-card">
-        <h2>{highQualityHeader}</h2>
-        <p>{highQualityText}</p>
-        <a href="/about-us">{highQualityBtn}</a>
+    <div class="quality-container">
+        <img src={highQualityImage} alt={highQualityAltText}>
+        <div class="high-quality-card">
+            <h2>{highQualityHeader}</h2>
+            <p>{highQualityText}</p>
+            <a href="/about-us">{highQualityBtn}</a>
+        </div>
     </div>
 </section>
