--- a/src/styles/_products-page.scss
+++ b/src/styles/_products-page.scss
@@ -38,6 +38,8 @@
 .products-container{
    
     align-items: center;
+    max-width: 700px;
+    margin: 0 auto;
 
        img {
         display: block;
@@ -61,13 +63,48 @@
     margin-top: 1rem
 }
 
-.more-products-section{
+.more-products-bg{
+
     @include products-hero-card($primary-blue);
-    margin: 96px 0 96px 0;
     border-radius: 0;
+}
+.more-products-container{
+    max-width: 700px;
+    margin: 0 auto;
+
+    h4{
+        margin: 1rem 0 1rem 0;
+    }
+
+     ul h3{
+        font-family: 'assistant', sans-serif;
+    }
 
 }
+.more-products-section{
+    background-color: white;
+    padding: 1rem;
+    border-radius: 12px;
+}
 
+
+.accordion .title {
+    font-size: 1.5rem;
+    color: $tertiary-dark-blue;
+    border: 2px solid $tertiary-dark-blue;
+    background-color: $secondary-yellow;
+    border-radius: 6px;
+    text-transform: uppercase;
+    padding: 1rem;
+    font-weight: bold;
+  }
+
+  .accordion .content {
+    padding: 2rem;
+    background: #FBE69E;
+    border: unset;
+    border-radius: 5px;
+  }
 .promo-products-container{
     
     @include products-hero-card($tertiary-dark-blue);
@@ -153,6 +190,43 @@
         width: 100%;
         height: 277px;
     }
+
+
+    .more-products-container{
+    max-width: 700px;
+    margin: 0 auto;
+
+    h4{
+        margin: 1rem 0 1rem 0;
+    }
+
+     ul h3{
+        font-family: 'assistant', sans-serif;
+    }
+
+}
+
+    .more-products-container{
+    max-width: unset;
+    margin: unset;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1rem;
+}
+
+.more-products-section{
+    display: flex;
+    grid-column: 2 / span 9;
+}
+.product-header-group img{
+    width: 80%;
+}
+.product-header-group{
+    width: 50%;
+}
+.accordion-group{
+    width: 50%;
+}
 
     .promo-products-container{
         display: grid;
