--- a/src/components/HomePage/About.astro
+++ b/src/components/HomePage/About.astro
@@ -11,13 +11,17 @@ const {
 ---
 
 <section class="about-section">
-    <h2>{aboutHeader}</h2>
-    <div class="about-info container">
-        <div class="about-flex">
-            <p>{aboutText}</p>
-            <a href="/request-quote" class="about-request">{requestQuoteBtn}</a>
-            <a href="/contact-us" class="about-contact">{contactUsBtn}</a>
+    <div class="about-header-grid">
+        <h2>{aboutHeader}</h2>
+    </div>
+    <div class="about-grid">
+        <div class="about-info container">
+            <div class="about-flex">
+                <p>{aboutText}</p>
+                <a href="/request-quote" class="about-request">{requestQuoteBtn}</a>
+                <a href="/contact-us" class="about-contact">{contactUsBtn}</a>
+            </div>
+            <Image src={aboutImage} alt={aboutAltText} inferSize={true} />
         </div>
-        <Image src={aboutImage} alt={aboutAltText} inferSize={true} />
     </div>
 </section>
