--- a/src/components/HomePage/FeaturedProducts.astro
+++ b/src/components/HomePage/FeaturedProducts.astro
@@ -20,34 +20,38 @@ import "../../styles/styles.scss";
 ---
 
 <section class="featured-products">
-    <h2>{featuredProductsHeader}</h2>
-    <div class="products-section container">
-        <section class="pressure-seal-section">
-            <h3>{pressureSealTitle}</h3>
-            <Image
-                src={pressureSealImage}
-                alt={pressureSealAltText}
-                inferSize={true}
-            />
-            <a href="/pressure-seal-forms">{pressureSealBtn}</a>
-        </section>
-        <section class="linerless-label-section">
-            <h3>{linerlessLabelTitle}</h3>
-            <Image
-                src={linerlessLabelImage}
-                alt={linerlessLabelAltText}
-                inferSize={true}
-            />
-            <a href="/linerless-labels">{linerlessLabelBtn}</a>
-        </section>
-        <section class="integrated-section">
-            <h3>{integratedFormText}</h3>
-            <Image
-                src={integratedFormImage}
-                alt={integratedFormAltText}
-                inferSize={true}
-            />
-            <a href="/integrated-form-labels">{integratedFormBtn}</a>
-        </section>
+    <div class="featured-header-grid">
+        <h2>{featuredProductsHeader}</h2>
+    </div>
+    <div class="product-grid">
+        <div class="products-section container">
+            <section class="linerless-label-section">
+                <h3>{linerlessLabelTitle}</h3>
+                <Image
+                    src={linerlessLabelImage}
+                    alt={linerlessLabelAltText}
+                    inferSize={true}
+                />
+                <a href="/linerless-labels">{linerlessLabelBtn}</a>
+            </section>
+            <section class="pressure-seal-section">
+                <h3>{pressureSealTitle}</h3>
+                <Image
+                    src={pressureSealImage}
+                    alt={pressureSealAltText}
+                    inferSize={true}
+                />
+                <a href="/pressure-seal-forms">{pressureSealBtn}</a>
+            </section>
+            <section class="integrated-section">
+                <h3>{integratedFormText}</h3>
+                <Image
+                    src={integratedFormImage}
+                    alt={integratedFormAltText}
+                    inferSize={true}
+                />
+                <a href="/integrated-form-labels">{integratedFormBtn}</a>
+            </section>
+        </div>
     </div>
 </section>
