--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,6 +1,7 @@
 @use 'colours' as *;
 @use 'mixins' as *;
 
+//Hero Section
 .hero-section {
     margin: 0 auto;
     position: relative;
@@ -99,6 +100,8 @@
     }
 }
 
+// High Quality Section
+
 .high-quality-section {
     background-color: $primary-blue;
     margin-top: 6rem;
@@ -135,6 +138,7 @@
 
 }
 
+// Featured Products Section
 .featured-products {
     margin-top: 6rem;
     color: $white;
@@ -199,6 +203,7 @@
     }
 }
 
+// Online Services Section
 .online-services {
     margin-top: 6rem;
     background-color: $primary-blue;
@@ -238,6 +243,7 @@
 
 }
 
+// About Us Section
 .about-section {
     margin: 6rem 0 6rem 0;
 
@@ -283,6 +289,8 @@
 }
 
 @media (min-width: 1000px) {
+
+    // Hero Section
     .hero-section {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
@@ -329,6 +337,7 @@
         }
     }
 
+    // High Quality Section
     .high-quality-section {
         margin-top: 9rem;
 
@@ -360,6 +369,7 @@
 
     }
 
+    // Featured Products Section
     .featured-products {
         margin-top: 9rem;
         max-width: 1920px;
@@ -422,6 +432,7 @@
         }
     }
 
+    // Online Services Section
     .online-services {
         margin-top: unset;
 
@@ -452,6 +463,7 @@
         }
     }
 
+    // About Us Section
     .about-section {
         margin: 9rem 0;
         max-width: 1920px;
