Fixed grid in about us page

--- a/src/components/AboutUs/AboutUsWhy.astro
+++ b/src/components/AboutUs/AboutUsWhy.astro
@@ -17,7 +17,7 @@ import "../../styles/styles.scss";
 ---
 
 <div class="about-bg">
-    <div class="about-wide-flex container">
+    <div class="about-wide-flex">
         <div class="about-flex">
             <div>
                 <h2>{whyChooseHeader}</h2>
