--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -97,6 +97,11 @@
         flex-direction: column;
         padding-bottom: 1rem;
         max-width: 700px;
+        margin: 0 auto;
+
+        img {
+            border-radius: 12px;
+        }
     }
 
     .about-flex {
@@ -217,32 +222,31 @@
     }
 
     .about-bg {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 20px;
         margin: 9rem 0 9rem 0;
 
         .about-wide-flex {
-            flex-direction: row;
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            gap: 20px;
+            grid-column: 3 / span 8;
             align-items: center;
-            max-width: 1254px;
-            gap: 2rem;
-            padding: 4rem 30px;
+            max-width: unset;
 
             img {
+                grid-column: span 4;
                 border-radius: 12px;
-                flex: 1;
-                width: 50%;
             }
         }
 
         .about-flex {
-            flex: 1;
-            width: 50%;
+            grid-column: span 4;
 
             h2 {
                 max-width: 500px;
-            }
-
-            .about-btn {
-                width: 316px;
+                font-size: 32px;
             }
         }
 
@@ -251,9 +255,17 @@
 }
 
 @media (min-width: 1600px) {
-.service {
-    h2 {
-        font-size: 48px;
+    .service {
+        h2 {
+            font-size: 48px;
+        }
     }
-}
+
+    .about-bg {
+        .about-flex {
+            h2 {
+                font-size: 48px;
+            }
+        }
+    }
 }
