Fixed desktop padding on about-flex

--- a/src/styles/_service-about-pages.scss
+++ b/src/styles/_service-about-pages.scss
@@ -244,6 +244,7 @@
 
         .about-flex {
             grid-column: span 4;
+            padding: unset;
 
             h2 {
                 max-width: 500px;
