fixed viewport styles products page

--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -20,7 +20,7 @@ const {
     } = Astro.props;
 ---
 
-<div>
+<div class="featured-products-grid">
     <div class="featured-h2-grid">
         <h2>{featureProductsHeader}</h2>
     </div>
