--- a/src/styles/_products-page.scss
+++ b/src/styles/_products-page.scss
@@ -30,37 +30,47 @@
     @include yellow-header-products;
     margin-top: 96px;
 }
-.featured-products-bg{
- @include products-hero-card($tertiary-dark-blue)  
-}
+// .featured-products-bg{
+//  @include products-hero-card($tertiary-dark-blue)  
+// }
 
 
 .products-container{
-   
-    align-items: center;
+    @include products-hero-card($tertiary-dark-blue);
+
     max-width: 700px;
     margin: 0 auto;
+    color: $white;
+    padding: 1rem ;
+ 
 
        img {
         display: block;
-        width: calc(100% + 2rem);
-        min-height: 180px;
+        max-width: 294px;
+        min-height: 300px;
+        flex-grow: 1;
         border-radius: 15px;
         margin: 0 auto;
-        align-items: center;
+        
         }
-
-       h3{
-        padding: 2rem 0 1rem 0;
-        color: $white;
+        section{
+            max-width: 300px;
+            margin: 0 auto;
         }
-
+        
+        h3{
+            padding-top: 1rem;
+        }
+       p{
+        padding-bottom: 1rem;
+       }
 }
 .featured-btn{
     @include  btn ($white, $tertiary-dark-blue, #FFEDAD);
     display: block;
     max-width: 100%; 
-    margin-top: 1rem
+    margin-top: 1rem;
+    font-size: 18px;
 }
 
 .more-products{
@@ -72,6 +82,7 @@
     border-radius: 0;
     margin: 96px 0 96px 0;
 }
+
 .more-products-container{
     max-width: 700px;
     margin: 0 auto;
@@ -134,6 +145,7 @@
     }
 
 }
+
 @media(min-width:1200px){
 
     .products-banner {
@@ -161,10 +173,13 @@
         }
     }
 
+
+   
     .featured-h2-grid{
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         gap: 1rem;
+       
 
         h2{
             grid-column: 5 / span 10;
@@ -173,13 +188,20 @@
    
 
     .featured-products-bg{
-        margin: 0 150px 0 150px;
+        // margin: 0 150px 0 150px;
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        gap: 1rem;
     }
     .products-container{
         display: grid;
         grid-template-columns: repeat(10, 1fr);
         gap: 1rem;
         max-width: unset;
+        align-items: end;
+        grid-column: 2 / span 10;
+
+        
     }
    
     .products-container section:nth-child(1){
@@ -190,11 +212,15 @@
     }
      .products-container section:nth-child(3){
         grid-column: 8 / span 2;
+
+        a{
+            padding: 2.5px;
+        }
     }
     .products-container section img{
-        max-width: 300px;
-        width: 100%;
-        height: 277px;
+        max-width: 100%;
+        height: auto;
+        display: block;
     }
 
 
