fixing responsiveness for some sections

--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -104,7 +104,9 @@ const moreProductsTestLoop = pageData.filter(
     {pressuresealDesc} {linerlessDesc} {integratedformDesc}/>
 
     <div class="more-products">
-      <h2>More Products</h2>
+      <div class="more-products-h2">
+        <h2>More Products</h2>
+      </div>
       {moreProductsTestLoop.map(product => (
       <MoreProducts  {...product} />
       ))}
