fixed form validation in request a quote page

--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -68,7 +68,7 @@ const {
             
             <div>
                 <label for="product-type">{ProductType} *</label>
-                <select name="_subject" id="product-type">
+                <select name="product_type" id="product-type">
                     <option value="">Choose a product</option>
                     <option value="Linerless Label">Linerless Label</option>
                     <option value="Pressure Seal">Pressure Seal Forms</option>
@@ -109,7 +109,7 @@ const {
                 name="attachment"
                 placeholder="Upload your file here."
             />
-            <p class="upload-p">Upload a file upto 5MB.</p>
+            <p class="upload-p">Upload a file up to 5MB.</p>
         </div>
         <div>
             <label for={AdditionalDetails}>{AdditionalDetails} *</label>
