update error message in form validation. changed phone field to a type: number

--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -40,7 +40,7 @@ const {
             <label for="phone">{Phone} *</label>
             <input
                 id="phone"
-                type="tel"
+                type="number"
                 name="phone"
                 placeholder="Enter your phone number here."
             />
