changed phone field in contact us to a type: number

--- a/src/components/ContactUs/ContactUsForm.astro
+++ b/src/components/ContactUs/ContactUsForm.astro
@@ -34,7 +34,7 @@ const {
         </div>
         <div>
             <label for="phone" class="label">{Phone} *</label>
-            <input id="phone" type="tel" name="phone" placeholder="Enter your phone number here."/>
+            <input id="phone" type="number" name="phone" placeholder="Enter your phone number here."/>
             <p id="phone_errormsg"></p>
         </div>
         <div>
