--- a/src/styles/_form-pages.scss
+++ b/src/styles/_form-pages.scss
@@ -40,10 +40,16 @@
     background-color: $white;
     border-radius: 15px;
     padding: 2rem 1rem 1rem 1rem;
+    max-width: 700px;
+    margin: 0 auto;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: relative;
+    z-index: 2;
+    padding-bottom: 2rem;
     
 }
 .form-p{
-    margin-bottom: 1rem;
+    margin: 1rem 0 1rem 0;
 }
 
 .form-card{
@@ -54,6 +60,11 @@
     border-radius: 15px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 1rem;
+    max-width: 700px;
+    margin: 0 auto;
+    margin-top: -2rem;
+    margin-bottom: 96px;
+
   
     input,
     select{
@@ -90,7 +101,6 @@ option{
     border: none;
 }
 
-
 .file-upload{
  display: inline-block;
   width: 100%;
@@ -112,7 +122,7 @@ option{
   padding: 0;
 }
 
-@media (min-width: 800px){
+@media (min-width: 1000px){
 
     .hero-grid{
         display: grid;
@@ -139,35 +149,34 @@ option{
     .contact-card{
         grid-column: 3/ span 12;
         border-radius: 0 0 15px 15px;
+        margin: unset;
         margin-top: -1rem;
+        z-index: unset;
     }
 
     .forms-page-wrapper{
-
           margin-bottom: 144px;
           gap: 1rem;
           display:grid;
           grid-template-columns: repeat(12, 1fr);
           align-items: start;
-          margin-top: 80px;
-          
+          margin-top: 80px;   
       }
     
     .forms-page-wrapper > :first-child{
         grid-column: 1 / span 5;
 
-    
     }
     .background-form{
         background-color: $tertiary-dark-blue;
         margin-top: 2rem;
         
     }
-    
     .form-card{
         grid-column: 7/ span 6;
         margin-top: 72px;
         box-shadow: none;
+        max-width: unset;
     }
 
     .product-type-quantity{
@@ -184,6 +193,14 @@ option{
 
 //desktop layout
 @media (min-width: 1200px) {
+
+    .forms-page-wrapper{
+        margin: 144px 0 144px 0;
+    }
+
+    .contact-info-card{
+        padding-top: unset;
+    }
     .form-h1{
         grid-column: 1 / span 12;
         left: 0;
